скорректировал размещение кода для вычета стоимости Ведущей.
Теперь он находится после цикла, где суммируется выручка по всем бронированиям за день, и перед расчетом бонуса администратора. Также добавил проверку, чтобы вычет происходил только один раз за день, если услуга "Ведущая" присутствует в любом из бронирований за этот день.

--- a/index.html
+++ b/index.html
@@ -2851,6 +2851,17 @@
                           }
                       });
 
+                      // Вычитаем фиксированную стоимость "Ведущей" из дневной выручки перед расчетом бонуса администратора.
+                      // Это нужно сделать ОДИН раз за день, если услуга "Ведущая" была хоть в одном бронировании дня.
+                      const hasHostessService = dayBookings.some(booking => 
+                          (booking.selectedServices && Array.isArray(booking.selectedServices) && booking.selectedServices.includes('hostess')) || 
+                          booking.serviceType === 'hostess' // Обратная совместимость
+                      );
+
+                      if (hasHostessService) {
+                          dayRevenue -= 1000; // Фиксированная стоимость Ведущей
+                      }
+
                       totalMonthRevenue += dayRevenue; // Добавляем к общей выручке месяца (уже с учетом скидок)
 
                       // Начисление зарплаты основному администратору (используем dayRevenue ПОСЛЕ скидок и вычета Ведущей)
