--- a/index.html
+++ b/index.html
@@ -2816,7 +2816,7 @@
                    }
                  });
                           } else if (booking.serviceType) { // Обратная совместимость со старым полем
-                               // Логика расчета суммы ДО скидки по старому полю serviceType
+                               // Логика расчета суммы ДО скидки по старому полю
                                // ... (логика расчета bookingRevenue по serviceType остается той же, но присваиваем в bookingTotalAmount) ...
                                console.warn('Using legacy serviceType for monthly salary calculation (calculating pre-discount amount)', booking);
                                if (booking.serviceType === 'birthday') {
@@ -3845,7 +3845,7 @@
                          }
                      });
                  } else if (booking.serviceType) { // Обратная совместимость со старым полем
-                      // Логика расчета суммы ДО скидки по старому полю serviceType
+                      // Логика расчета суммы ДО скидки по старому полю
                       // ... (логика расчета bookingRevenue по serviceType остается той же, но присваиваем в bookingTotalAmount) ...
                        console.warn('Using legacy serviceType for weekly payroll calculation (calculating pre-discount amount)', booking);
                        if (booking.serviceType === 'birthday') {
@@ -4250,6 +4250,17 @@
           birthdayRevenue += finalBookingAmount;
         }
       });
+
+      // Вычитаем фиксированную стоимость "Ведущей" из дневной выручки перед отображением и расчетами в модальном окне.
+      // Это нужно сделать ОДИН раз за день, если услуга "Ведущая" была хоть в одном бронировании дня.
+      const hasHostessService = dayBookings.some(booking => 
+          (booking.selectedServices && Array.isArray(booking.selectedServices) && booking.selectedServices.includes('hostess')) || 
+          booking.serviceType === 'hostess' // Обратная совместимость
+      );
+
+      if (hasHostessService) {
+          dayRevenue -= 1000; // Фиксированная стоимость Ведущей
+      }
 
       // Создаем карточку информации об администраторах
       const adminInfoCard = document.createElement('div');
